# propresenter-client

./: Claude.md  README.md  presentation.config  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/propresenter_client/: __init__.py
src/propresenter_slides/: __init__.py  main.py
tests/: test_propresenter_controller.py
