[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "propresenter-client"
version = "0.1.0"
description = "Python client for the ProPresenter REST API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["propresenter", "api", "client", "presentation", "slides"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/scaperothian/propresenter-client"
Repository = "https://github.com/scaperothian/propresenter-client.git"
Issues = "https://github.com/scaperothian/propresenter-client/issues"

[tool.setuptools]
packages = ["propresenter_client"]

[tool.setuptools.package-dir]
"" = "src"


[tool.poetry.dependencies]
requests = "^2.33.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"

[project.scripts]
propresenter-client = "propresenter_client.main:main"
