[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "propresenter-client"
description = "Python client for the ProPresenter REST API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "scaperothian", email = "scaperoth@berkeley.edu"},
]
keywords = ["propresenter", "api", "client", "presentation", "slides"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "build>=1.0",
]

[project.urls]
Homepage = "https://github.com/scaperothian/propresenter-client"
Repository = "https://github.com/scaperothian/propresenter-client.git"
Issues = "https://github.com/scaperothian/propresenter-client/issues"

[project.scripts]
propresenter-client = "propresenter_client.main:main"

[tool.setuptools]
packages = ["propresenter_client"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools_scm]
